# ArrayViewer

./: .gitignore  CHANGELOG.md  Charts.py  Data.py  MANIFEST.in  README.md  Slider.py  Viewer.py  aview  debug.py  pyproject.toml  release.sh  requirements.txt  setup.py
ArrayViewer/: Charts.py  Data.py  DataTree.py  Dialogs.py  Editor.py  Options.py  Shape.py  Slider.py  Style.py  Viewer.py  __init__.py
docs/: code.rst  conf.py  index.rst  introduction.rst  menu.rst
