[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ArrayViewer"
version = "1.1.4.1"
authors = [
    { name = "Alex Schwarz", email = "schwarz-alex@mail.de" },
]
description = "ArrayViewer"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.14",
    "numpy>=1.22.2",
    "scipy>=1.11.2",
    "h5py>=3.11.0",
    "matplotlib>=3.6.0",
    "Pillow>=10.2",
    "natsort",
    "fonttools>=4.43.0",
]
license = "GPL-3.0-only"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/alexschw/ArrayViewer"
Documentation = "https://arrayviewer.readthedocs.io/"

[project.gui-scripts]
aview = "ArrayViewer.Viewer:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ArrayViewer*"]
